force-app/main/default/objects/PlantRoutingHub__c/PlantRoutingHub__c.object-meta.xml
<CustomObject>
    <label>Plant Routing Hub</label>
    <nameField>
        <displayFormat>PRH-{00000}</displayFormat>
        <label>PRH #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plant Routing Hubs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>