force-app/main/default/objects/PlantRoutingHub__c/fields/HubAccount__c.field-meta.xml
<CustomField>
    <fullName>HubAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Hub account for the routing</inlineHelpText>
    <label>Hub Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Plant Routing Hubs (Hub Account)</relationshipLabel>
    <relationshipName>PlantRoutingHubsHub</relationshipName>
    <type>Lookup</type>
</CustomField>