force-app/main/default/objects/PlantRoutingHub__c/fields/ProcessingOffset__c.field-meta.xml
<CustomField>
    <fullName>ProcessingOffset__c</fullName>
    <inlineHelpText>Processing Time at the Hub (in hours)</inlineHelpText>
    <label>Processing Offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>