force-app/main/default/objects/PlantRoutingHub__c/fields/RoutingAccount__c.field-meta.xml
<CustomField>
    <fullName>RoutingAccount__c</fullName>
    <inlineHelpText>Account grouping the different routing hubs together</inlineHelpText>
    <label>Routing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Plant Routing Hubs</relationshipLabel>
    <relationshipName>PlantRoutingHubs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>