force-app/main/default/objects/PlantRoutingHub__c/fields/TransitOffset__c.field-meta.xml
<CustomField>
    <fullName>TransitOffset__c</fullName>
    <inlineHelpText>Transit time (in hours)</inlineHelpText>
    <label>Transit Offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>